Bug 155862 - krunner doesn't accept ',' as decimal symbol
Summary: krunner doesn't accept ',' as decimal symbol
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-15 22:25 UTC by Ivo Anjo
Modified: 2008-04-03 19:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ivo Anjo 2008-01-15 22:25:47 UTC
Version:            (using KDE KDE 4.0.0)
Installed from:    SuSE RPMs
OS:                Linux

Krunner only accepts '.' as a decimal symbol, not ','.

I've got the correct locale selected on systemsettings, but i'm not sure if the best solution would be to add support so that 10,9 is always the same as 10.9, or only when correct locale is selected (because of possible future support for thousands separator, like 100.000,5 or 100,000.5 depending again of the locale).
Comment 1 Jordi Polo 2008-04-03 19:41:47 UTC
Now we honor the locale.  If the locale says 10,9 means 10.9 so krunner process.
BTW, very nice idea.