Added user friendly substitutions to the calculator command line. - e+ E+ and ^ becomes the pow operation - Honor locale decimal symbol - Added "and" "or" "xor" operatons

BUG:155862
BUG:158652

svn path=/trunk/KDE/kdebase/workspace/; revision=793182